@@ -11,6 +11,7 @@ New features:
  - [ZBXNEXT-511] renamed item description to name, for description introduced a new field (asaveljevs, Vedmak)
 
 Bug fixes:
+ - [ZBX-3758] made Zabbix daemons remove their PID file upon unsuccessful startup (asaveljevs)
  - [ZBX-3791] fixed item form caption after cloning item (Vedmak)
  - [ZBX-3689] fixed error when adding a new second-level IT Service (Alexei)
  - [ZBX-3715] improve frontend message style & grammar (Richlv)
